--- a/nodeJS/package.json
+++ b/nodeJS/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.26.0"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -27,11 +28,17 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "coreapi": "^0.1.1",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "mdi-react": "^2.1.19",
+    "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-md": "^1.2.9",
     "react-router-dom": "^4.2.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.5",
     "webpack": "^3.10.0",
     "webpack-merge": "^4.1.1"
