--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
+asgi-redis==1.4.3
+asgiref==1.1.2
+attrs==17.4.0
+autobahn==17.10.1
+Automat==0.6.0
+channels==1.1.8
+constantly==15.1.0
+daphne==1.4.1
 Django==1.11.8
+hyperlink==17.3.1
+incremental==17.5.0
+msgpack-python==0.4.8
+pypiwin32==220
 pytz==2017.3
+redis==2.10.6
+six==1.11.0
+Twisted==17.9.0
+txaio==2.8.2
+zope.interface==4.4.3
