--- a/nodeJS/package.json
+++ b/nodeJS/package.json
@@ -32,6 +32,7 @@
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "mdi-react": "^2.1.19",
+    "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
